[gd_scene load_steps=7 format=3 uid="uid://1g2f3jfdsi6i"]

[ext_resource type="Script" uid="uid://dltgw52e8uf3m" path="res://new.n.t-main/MainMenu.gd" id="1_0xbyl"]
[ext_resource type="Texture2D" uid="uid://rqyt0200q1y8" path="res://new.n.t-main/mainMenuBackground.png" id="2_1txdl"]
[ext_resource type="Texture2D" uid="uid://bmgkrt7bu057a" path="res://new.n.t-main/border.png" id="3_m16r1"]
[ext_resource type="FontFile" uid="uid://8nrvf8tks1ok" path="res://new.n.t-main/Press_Start_2P/PressStart2P-Regular.ttf" id="4_ju15h"]
[ext_resource type="Texture2D" uid="uid://bvy16tua6ah7l" path="res://new.n.t-main/button.png" id="5_0bjyp"]
[ext_resource type="Texture2D" uid="uid://mqnycl4ypfon" path="res://new.n.t-main/new.N.T..png" id="6_sulrv"]

[node name="Control" type="Control"]
layout_mode = 3
anchor_right = 0.998
anchor_bottom = 1.0
offset_right = 0.303955
offset_bottom = 4.0
script = ExtResource("1_0xbyl")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.991
offset_bottom = -0.132019

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.059
anchor_top = 0.103
anchor_right = 0.949
anchor_bottom = 0.912
offset_left = -16.85
offset_top = -30.156
offset_right = -0.350098
offset_bottom = 0.375977
texture = ExtResource("2_1txdl")
expand_mode = 1

[node name="Border" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.999
anchor_bottom = 0.991
offset_right = 1.1499
offset_bottom = -0.132019
texture = ExtResource("3_m16r1")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.278
anchor_top = 0.405
anchor_right = 0.723
anchor_bottom = 0.777
offset_left = 0.299957
offset_top = -8.06003
offset_right = 0.549866
offset_bottom = 69.396

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.1
theme_override_fonts/font = ExtResource("4_ju15h")
theme_override_font_sizes/font_size = 24
text = "
Start

"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Button"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.054
anchor_top = -0.184
anchor_right = 1.112
anchor_bottom = 1.053
offset_left = 11.648
offset_top = -24.28
offset_right = -45.3441
offset_bottom = 37.76
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_0bjyp")
expand_mode = 1

[node name="Label" type="Label" parent="VBoxContainer/Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_ju15h")
theme_override_font_sizes/font_size = 24
text = "Start"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_fonts/font = ExtResource("4_ju15h")
theme_override_font_sizes/font_size = 24
text = "
Options

"

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/Button2"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.054
anchor_top = -0.184
anchor_right = 1.112
anchor_bottom = 1.053
offset_left = 11.648
offset_top = -22.016
offset_right = -45.3441
offset_bottom = 40.024
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_0bjyp")
expand_mode = 1

[node name="Label2" type="Label" parent="VBoxContainer/Button2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_ju15h")
theme_override_font_sizes/font_size = 24
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_fonts/font = ExtResource("4_ju15h")
theme_override_font_sizes/font_size = 24
text = "
Quit

"

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer/Button3"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.054
anchor_top = -0.184
anchor_right = 1.112
anchor_bottom = 1.053
offset_left = 11.648
offset_top = -20.016
offset_right = -45.3441
offset_bottom = 42.024
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_0bjyp")
expand_mode = 1

[node name="Label3" type="Label" parent="VBoxContainer/Button3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_ju15h")
theme_override_font_sizes/font_size = 24
text = "Quit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.187
anchor_top = 0.057
anchor_right = 0.83
anchor_bottom = 0.449
offset_left = -0.0500031
offset_top = -0.164001
offset_right = 0.499939
offset_bottom = 0.251984
texture = ExtResource("6_sulrv")
expand_mode = 1

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_start_game_pressed"]
